# crawl_naver_smartstore

./: .gitignore  README.md  docker-compose.yml
app/: .gitignore  Dockerfile  pyproject.toml
app/crawler/: crawler.py
app/source/: crawler.py  uploader.py
