[project]
name = "crawl-naver-smartstore"
version = "0.1.0"
description = ""
authors = [
    {name = "Hojoong Jang",email = "hojoong310@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "selenium (>=4.31.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "boto3 (>=1.38.4,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
